clusters/capstone-demo/apps/default/authelia/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: authelia
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging

spec:
  rules:
    - host: wikijs.kuberbitnetes.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: authelia-proxy
                port:
                  number: 443
  tls:
    - hosts:
        - wikijs.kuberbitnetes.xyz
